Implementacion del calculo de sueldo de cada empleado

--- a/Proyecto1_Tingeso/src/main/resources/templates/index.html
+++ b/Proyecto1_Tingeso/src/main/resources/templates/index.html
@@ -21,6 +21,8 @@
             <a class="nav-item nav-link" href="/subirArchivo">Subir Ingresos y salidas</a>
             <a class="nav-item nav-link" href="/nuevoJustificativo">Ingresar Justificativos</a>
             <a class="nav-item nav-link" href="#">Ingresar Autorizaciones</a>
+            <a class="nav-item nav-link" href="/prueba">Prueba</a>
+            <a class="nav-item nav-link" href="/empleado/listar">Empleados</a>
         </div>
     </div>
 </nav>
