--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -11,7 +11,7 @@
   <title>Archivos</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
-  <a class="navbar-brand" href="/">MueblesStgo</a>
+  <a class="navbar-brand" href="/">MueblesStgo2022</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
